<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.lorenzo.germana.easydrive.MainActivity"
    android:padding="0dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ElementContainer">
    </FrameLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/TopMenuContainer"
        android:layout_marginTop="-80dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/tabContainer"
            android:layout_marginRight="10dp"
            android:background="#FFFFFF">

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/maps_button_text"
                android:id="@+id/mapsButton"
                android:layout_weight="30"
                style="@style/tab_button_style"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/music_button_text"
                android:id="@+id/musicButton"
                android:layout_weight="30"
                style="@style/tab_button_style"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/message_button_text"
                android:id="@+id/messagesButton"
                android:layout_weight="30"
                style="@style/tab_button_style"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/message_button_text"
                android:id="@+id/callsButton"
                android:layout_weight="30"
                style="@style/tab_button_style"/>

        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:id="@+id/showTabBar"
            android:enabled="true"
            android:focusable="true"
            android:clickable="true"
            android:maxHeight="20dp"
            android:background="#334455" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="450dp"
        android:layout_height="match_parent"
        android:id="@+id/Menu"
        android:layout_marginLeft="-430dp"
        android:background="#ffffff">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="5"
            android:id="@+id/MenuElementsContainer"
            android:layout_alignParentTop="false"
            android:layout_above="@+id/MusicPlayerCommands"
            android:layout_toLeftOf="@+id/showMenuBar">
        </ScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/MusicPlayerCommands"
            android:layout_weight="2"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/showMenuBar">

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:id="@+id/space2"
                android:layout_toRightOf="@+id/ButtonPlayPause"
                android:layout_alignTop="@+id/ButtonPlayPause"/>

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:id="@+id/space4"
                android:layout_alignTop="@+id/ButtonPlayPause"
                android:layout_toLeftOf="@+id/ButtonPlayPause"/>

            <TextView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:text="@string/music_button_play_pause"
                android:id="@+id/ButtonPlayPause"
                android:editable="true"
                android:clickable="true"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:background="#c2b9b9"/>

            <TextView
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:text="@string/music_button_next"
                android:id="@+id/ButtonPrevious"
                android:editable="true"
                android:clickable="true"
                android:layout_toRightOf="@+id/space2"
                android:layout_alignTop="@+id/ButtonPlayPause"
                android:gravity="center"
                android:background="#c2b9b9"/>

            <TextView
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:text="@string/music_button_previous"
                android:id="@+id/ButtonNext"
                android:editable="true"
                android:clickable="true"
                android:layout_toLeftOf="@+id/space4"
                android:layout_alignTop="@+id/ButtonPlayPause"
                android:gravity="center"
                android:background="#c2b9b9"/>
        </RelativeLayout>

        <TextView
            android:layout_width="20dp"
            android:layout_height="fill_parent"
            android:id="@+id/showMenuBar"
            android:layout_alignParentRight="true"
            android:background="#999999" />
    </RelativeLayout>

</RelativeLayout>
