<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="0dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/UpperPart"
        android:layout_above="@+id/LowerPart"
        android:baselineAligned="false"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/OperationContainer"
            android:layout_weight="4"
            android:background="@color/colorPrimary">

	        <ImageView
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:id="@+id/imageView2"
		        android:src="@drawable/freccia"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/ElementContainer"
            android:layout_weight="6"
	        android:background="@color/colorPrimaryDark">

	        <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="Benvenuto!\nPremi sulla barra\nsovrastante per iniziare\na usare l&apos;applicazione"
		        android:id="@+id/textView"
		        android:layout_centerInParent="true"
		        android:textSize="30dp"
		        android:gravity="center"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/LowerPart"
        android:padding="0dp"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/ButtonContainer"
            android:layout_weight="4"
	        android:orientation="horizontal"
	        android:background="@color/colorPrimaryDark">

	        <ImageButton
		        android:layout_width="0dp"
		        android:layout_height="fill_parent"
		        android:text="New Text"
		        android:id="@+id/shuffleButton"
		        android:layout_weight="1"
		        android:layout_margin="1dp"
		        android:src="@drawable/shuffle_black"
		        android:alpha="0.5"
		        android:background="@drawable/roundshape"
		        android:scaleType="centerCrop"/>

	        <ImageButton
		        android:layout_width="0dp"
		        android:layout_height="fill_parent"
		        android:text="New Text"
		        android:id="@+id/backwardButton"
		        android:layout_weight="1"
		        android:layout_margin="1dp"
		        android:src="@drawable/skip_previous_black"
		        android:alpha="0.5"
		        android:scaleType="centerCrop"
		        android:background="@drawable/roundshape"/>

	        <ImageButton
		        android:layout_width="0dp"
		        android:layout_height="fill_parent"
		        android:text="New Text"
		        android:id="@+id/playButton"
		        android:layout_weight="1"
		        android:layout_margin="1dp"
		        android:src="@drawable/play_arrow_black"
		        android:alpha="0.5"
		        android:scaleType="centerCrop"
		        android:background="@drawable/roundshape"/>

	        <ImageButton
		        android:layout_width="0dp"
		        android:layout_height="fill_parent"
		        android:text="New Text"
		        android:id="@+id/forwardButton"
		        android:layout_weight="1"
		        android:layout_margin="1dp"
		        android:src="@drawable/skip_next_black"
		        android:alpha="0.5"
		        android:scaleType="centerCrop"
		        android:background="@drawable/roundshape"/>

	        <ImageButton
		        android:layout_width="0dp"
		        android:layout_height="fill_parent"
		        android:text="New Text"
		        android:id="@+id/replayButton"
		        android:layout_weight="1"
		        android:layout_margin="1dp"
		        android:src="@drawable/repeat_icon_black"
		        android:alpha="0.5"
		        android:scaleType="centerCrop"
		        android:background="@drawable/roundshape"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/BarContainer"
            android:layout_weight="6"
	        android:orientation="horizontal"
	        android:background="@color/colorPrimary">

	        <TextView
		        android:layout_width="0dp"
		        android:layout_height="fill_parent"
		        android:text="0.00"
		        android:id="@+id/musicCurrentTime"
		        android:layout_weight="1"
		        android:minWidth="50dp"
		        android:gravity="center"
		        android:textColor="#FFFFFF"
		        android:textSize="20dp"/>

	        <SeekBar
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:id="@+id/musicBar"
		        android:layout_weight="5"
		        android:layout_gravity="center"
		        android:indeterminate="false"
		        android:max="100"
		        android:progress="0"/>

	        <TextView
		        android:layout_width="0dp"
		        android:layout_height="fill_parent"
		        android:text="0.00"
		        android:id="@+id/musicMaxTime"
		        android:layout_weight="1"
		        android:minWidth="50dp"
		        android:gravity="center"
		        android:textColor="#FFFFFF"
		        android:textSize="20dp"/>

        </LinearLayout>
    </LinearLayout>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/Volume"
		android:layout_above="@+id/LowerPart"
		android:layout_alignRight="@+id/LowerPart">

		<SeekBar
			android:layout_width="250dp"
			android:layout_height="wrap_content"
			android:id="@+id/volumeBar"
			android:max="100"
			android:progress="100"
			android:layout_toLeftOf="@+id/volumeIcon"
			android:layout_alignTop="@+id/volumeIcon"
			android:layout_marginTop="0dp"
			android:background="#999999"
			android:visibility="gone"
			android:layout_gravity="center"/>

		<ImageButton
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:id="@+id/volumeIcon"
			android:layout_above="@+id/LowerPart"
			android:layout_alignRight="@+id/LowerPart"
			android:src="@drawable/volume_up_black"
			android:scaleType="centerCrop"
			android:background="#00FFFFFF"/>
	</LinearLayout>

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="100dp"
		android:id="@+id/TopMenuContainer"
		android:layout_marginTop="-80dp">

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="80dp"
			android:layout_marginLeft="10dp"
			android:id="@+id/tabContainer"
			android:layout_marginRight="10dp"
			android:background="#FFFFFF"
			android:focusableInTouchMode="false">

			<TextView
				style="@style/tab_button_style"
				android:layout_width="0dp"
				android:layout_height="fill_parent"
				android:text="@string/maps_button_text"
				android:id="@+id/mapsButton"
				android:layout_weight="30"/>

			<Space
				android:layout_width="0dp"
				android:layout_height="fill_parent"
				android:layout_weight="1"/>

			<TextView
				style="@style/tab_button_style"
				android:layout_width="0dp"
				android:layout_height="fill_parent"
				android:text="@string/music_button_text"
				android:id="@+id/musicButton"
				android:layout_weight="30"/>

			<Space
				android:layout_width="0dp"
				android:layout_height="fill_parent"
				android:layout_weight="1"/>

			<TextView
				style="@style/tab_button_style"
				android:layout_width="0dp"
				android:layout_height="fill_parent"
				android:text="@string/message_button_text"
				android:id="@+id/callsMsgButton"
				android:layout_weight="30"/>

		</LinearLayout>

		<ImageView
			android:layout_width="fill_parent"
			android:layout_height="20dp"
			android:id="@+id/showTabBar"
			android:enabled="true"
			android:focusable="true"
			android:clickable="true"
			android:maxHeight="20dp"
			android:background="#334455"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/SpeechTexts"
		android:minWidth="300dp"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="50dp"
		android:orientation="horizontal"
		android:gravity="center"
		android:visibility="invisible">

		<ImageView
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:id="@+id/SpeechImageView"
			android:src="@drawable/mic_black"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="New Text"
			android:id="@+id/SpeechTextView"
			android:textSize="25dp"
			android:minWidth="200dp"
			android:gravity="center"
			android:maxWidth="500dp"/>

	</LinearLayout>
</RelativeLayout>